samples/_failures_safe/1761078226_ee0f9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31de7ec4.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_31de7ec4.c:169:18: error: ‘TOKEN_IDENTIFI’ undeclared (first use in this function); did you mean ‘TOKEN_IDENTIFIER’?
  169 |             case TOKEN_IDENTIFI
      |                  ^~~~~~~~~~~~~~
      |                  TOKEN_IDENTIFIER
./samples/SAFE/__tmp_31de7ec4.c:169:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_31de7ec4.c:169:13: error: expected ‘:’ or ‘...’ at end of input
  169 |             case TOKEN_IDENTIFI
      |             ^~~~
./samples/SAFE/__tmp_31de7ec4.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31de7ec4.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31de7ec4.c:169:13: error: expected declaration or statement at end of input
